Fixing clip-path on about-me-image class, fixing hamburger close on mobile

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -3,7 +3,6 @@
   padding-top: 30px;
   display: flex;
   background: url(../assets/images/pizza.jpg);
-  //background: $black;
   height:auto;
   margin-top: 50px;
   color: #f7f7f7;
@@ -16,14 +15,6 @@
   //margin-top: 10px;
   width: 100%;
   //height: 100vh;
-}
-
-.about-me-image {
-  //background: url(../assets/images/pizza.jpg);
-  //background-position: 0%;
-   background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
 }
 
 .circle-img {
@@ -63,7 +54,6 @@
 
   .about-me-image {
     display: inline-block;
-    //min-height: 100vh;
     width: 100%;
     background-position: 90%;
   }
@@ -94,14 +84,6 @@
     padding-top: 0px;
   }
 
-  .about-me-image {
-    //background: url(../assets/images/pizza.jpg);
-    width: 100%;
-    height: 100%;
-    -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  }
-
   .about-me-content {
     margin: 30px 0;
     color: #f7f7f7;
@@ -126,6 +108,6 @@
     width: 100%;
     -webkit-clip-path: polygon(10% 0, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(10% 0%, 100% 0, 100% 100%, 0 100%);
-    // transform: translateY(-1px);s
+    // transform: translateY(-1px);
   }
 }
