--- a/_sass/menu-icon.scss
+++ b/_sass/menu-icon.scss
@@ -45,6 +45,10 @@
   top: 12px;
 }
 
+#nav-icon3.open span {
+  background: #fff;
+}
+
 #nav-icon3.open span:nth-child(1) {
   top: 18px;
   width: 0%;
